<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/about_me_dev_category"
        app:iconSpaceReserved="false">

        <Preference
            android:key="about_me_developer"
            android:title="@string/about_me_dev_title"
            android:summary="@string/about_me_dev_summary"
            android:icon="@drawable/ic_about_dev"
            android:selectable="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_me_links_category"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false">

        <Preference
            android:key="about_me_contact"
            android:title="@string/about_me_contact_title"
            android:summary="@string/about_me_contact_summary"
            android:icon="@drawable/ic_about_telegram" />

        <Preference
            android:key="about_me_donate"
            android:title="@string/about_me_donate_title"
            android:summary="@string/about_me_donate_summary"
            android:icon="@drawable/ic_about_donate" />

        <Preference
            android:key="about_me_donate2"
            android:title="@string/about_me_donate2_title"
            android:summary="@string/about_me_donate2_summary"
            android:icon="@drawable/ic_about_donate" />

    </PreferenceCategory>

</PreferenceScreen>
